[gd_scene load_steps=12 format=2]

[ext_resource path="res://Animations/Explosion1Animation.gd" type="Script" id=1]
[ext_resource path="res://Images/Battle/Explosion1Animation.png" type="Texture" id=2]
[ext_resource path="res://Music/SFX/explosion_short_1.wav" type="AudioStream" id=3]


[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 100, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "explosion",
"speed": 14.0
} ]

[node name="Explosion1Animation" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "explosion"

[node name="BoomSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
